--- a/style.css
+++ b/style.css
@@ -261,7 +261,7 @@ a:hover {
     align-items: center;
 }
 }
-@media screen and (max-width: 470px) {
+@media screen and (max-width: 470px) and (min-height: 926px) {
   .mainBox {
     width: 80%;
   }
