--- a/style.css
+++ b/style.css
@@ -132,7 +132,8 @@ a:hover {
   color: white;
   position: absolute;
   top: 70px;
-  left: 50px;
+  width: 100%;
+  text-align: center;
 }
 .SignupDiv .inputForm {
   width: 80%;
@@ -143,7 +144,7 @@ a:hover {
 .SignupDiv .btn {
   top: -15px;
 }
-.magicBtndiv{
+.magicBtndiv {
   width: 100%;
   height: 10%;
   position: absolute;
@@ -170,27 +171,29 @@ a:hover {
 .subLoginDiv h1 {
   color: white;
   position: absolute;
-  top: 186px;
+  top: 195px;
   text-align: center;
   width: 100%;
   font-size: 40px;
 }
 .welcome-back {
-  height: 40%;
+  height: 100%;
   width: 100%;
 }
 .welcome {
-  height: 40%;
+  height: 100%;
   width: 100%;
 }
 .welcome .welcome-quote {
-  width: 100%;
-  text-align: center;
+  width: fit-content;
+  text-align: left;
+  margin: 10px 20px;
 }
 .welcome .Link {
-  width: 100%;
+  width: 88%;
   text-align: center;
-  top: 290px;
+  top: 285px;
+  margin: 10px 20px;
 }
 .welcome-quote {
   color: white;
@@ -210,18 +213,21 @@ a:hover {
   display: none;
   transition: 1s ease;
 }
-@media screen and (max-width: 769px) {
-  .mainBox{
+@media screen and (min-width: 471px) and (max-width: 769px) {
+  .mainBox {
     width: 87%;
   }
   .subLoginDiv h1 {
-    top: 128px;
+    top: 195px;
     left: 2px;
     font-size: 38px;
+    margin: 10px 20px;
+    width: 88%;
+    text-align: left;
   }
-  .welcome-quote{
-    width: 84%;
-    top: 210px;
+  .welcome-quote {
+    width: 93%;
+    top: 265px;
   }
   .subLoginDiv {
     border-radius: 200px 20px 20px 200px;
@@ -239,33 +245,70 @@ a:hover {
     margin: 30px 0;
   }
   .SignupDiv {
-    width: 54%;
+    width: 50%;
   }
   .SignupDiv h1 {
     font-size: 30px;
-    left: 5px;
     top: 78px;
   }
   .Link {
-    top: 270px;
+    top: 320px;
     width: 100%;
     text-align: center;
   }
+  .welcome .Link {
+    top: 300px;
+  }
+  .welcome .welcome-quote {
+    top: 255px;
+  }
   .magicBtndiv {
-    width: 100%;
+    width: 88%;
     height: 10%;
     position: absolute;
-    top: 300px;
+    top: 324px;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 10px 20px;
+  }
+  .welcome .magicBtndiv {
+    top: 320px;
+    right: 0;
+  }
+  .welcome-back {
+    position: relative;
+    height: 32%;
+    margin: auto;
+  }
+  .welcome-back h1 {
+    top: 0;
+    left: 0;
+    position: relative;
+    width: 88%;
+  }
+  .welcome-back .welcome-quote {
+    top: 0;
+    margin: 0 20px;
+    position: relative;
+    width: fit-content;
+  }
+  .welcome-back .Link {
+    position: relative;
+    top: 0;
+    margin: 10px 0px;
+    width: 100%;
+  }
+  .welcome-back .magicBtndiv {
+    position: relative;
+    top: 5px;
+  }
 }
-}
-@media screen and (max-width: 470px){
+@media screen and (max-width: 470px) {
   .mainBox {
     width: 80%;
   }
-  .welcome-quote{
+  .welcome-quote {
     display: none;
   }
   .subLoginDiv {
@@ -293,7 +336,7 @@ a:hover {
     width: 100%;
     text-align: center;
   }
-  .magicBtndiv{
+  .magicBtndiv {
     width: 100%;
     height: 10%;
     position: absolute;
@@ -309,8 +352,8 @@ a:hover {
     width: 100%;
     left: 0;
   }
-  .welcome .Link{
-    top: 428px;
+  .welcome .Link {
+    top: 418px;
   }
   .SignupDiv h1 {
     top: 70px;
@@ -320,7 +363,17 @@ a:hover {
   .SignupDiv .btn {
     top: -30px;
   }
-  .welcome .magicBtn{
+  .welcome .magicBtn {
     z-index: 200;
+  }
+}
+@media screen and (max-width: 405px) {
+  .loginDiv .forgottenDiv {
+    flex-direction: column;
+    gap: 10px;
+  }
+  .loginDiv .btn {
+    top: 0;
+    margin: 5px 0px;
   }
 }
